<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".FeelingActivity">

    <com.cavsci.medres.widget.TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:shadowColor="@color/shadow"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:text="@string/how_are_you_today"
        android:textSize="@dimen/text_size_title" />

    <com.cavsci.medres.widget.TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:shadowColor="@color/shadow"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:text="@string/weve_handpicked_a_few_things"
        android:textSize="@dimen/text_size_content" />

    <com.cavsci.medres.widget.TextView
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/background_stroke"
        android:gravity="center"
        android:onClick="onCopingAnxietyClicked"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:shadowColor="@color/blue"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:text="@string/coping_with_anxiety"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_button" />

    <com.cavsci.medres.widget.TextView
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_stroke"
        android:gravity="center"
        android:onClick="onStressClicked"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:shadowColor="@color/blue"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:text="@string/stress"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_button" />

    <com.cavsci.medres.widget.TextView
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_stroke"
        android:gravity="center"
        android:onClick="onLackSleepClicked"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:shadowColor="@color/blue"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:text="@string/lack_of_sleep"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_button" />

    <com.cavsci.medres.widget.TextView
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_stroke"
        android:gravity="center"
        android:onClick="onPositiveEnergyClicked"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:shadowColor="@color/blue"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:text="@string/positive_energy"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_button" />

    <com.cavsci.medres.widget.TextView
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_stroke"
        android:gravity="center"
        android:onClick="onFocusClicked"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:shadowColor="@color/blue"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:text="@string/focus"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_button" />

    <com.cavsci.medres.widget.TextView
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_stroke"
        android:gravity="center"
        android:onClick="onInnerPeaceClicked"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:shadowColor="@color/blue"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:text="@string/inner_peace"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_button" />


</LinearLayout>