<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_mask" />

    <com.cavsci.medres.widget.TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:shadowColor="@color/shadow"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="@dimen/shadow_radius"
        android:text="@string/how_are_you_today"
        android:textSize="@dimen/text_size_subtitle"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.cavsci.medres.widget.TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:shadowColor="@color/shadow"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="@dimen/shadow_radius"
        android:text="@string/weve_handpicked_a_few_things"
        android:textSize="@dimen/text_size_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.cavsci.medres.widget.TextView
        android:id="@+id/textView3"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/background_stroke_white"
        android:gravity="center"
        android:onClick="onCopingAnxietyClicked"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="@dimen/shadow_radius"
        android:text="@string/coping_with_anxiety"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.cavsci.medres.widget.TextView
        android:id="@+id/textView4"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_stroke_white"
        android:gravity="center"
        android:onClick="onStressClicked"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="@dimen/shadow_radius"
        android:text="@string/stress"
        android:textColor="@color/white"

        android:textSize="@dimen/text_size_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <com.cavsci.medres.widget.TextView
        android:id="@+id/textView5"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_stroke_white"
        android:gravity="center"
        android:onClick="onLackSleepClicked"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="@dimen/shadow_radius"
        android:text="@string/lack_of_sleep"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <com.cavsci.medres.widget.TextView
        android:id="@+id/textView6"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_stroke_white"
        android:gravity="center"
        android:onClick="onPositiveEnergyClicked"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="@dimen/shadow_radius"
        android:text="@string/positive_energy"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <com.cavsci.medres.widget.TextView
        android:id="@+id/textView7"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_stroke_white"
        android:gravity="center"
        android:onClick="onFocusClicked"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="@dimen/shadow_radius"
        android:text="@string/focus"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <com.cavsci.medres.widget.TextView
        android:id="@+id/textView8"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_stroke_white"
        android:gravity="center"
        android:onClick="onInnerPeaceClicked"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="@dimen/shadow_radius"
        android:text="@string/inner_peace"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />
</androidx.constraintlayout.widget.ConstraintLayout>