<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background7"
    tools:context=".ThankYouActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_mask" />

    <com.cavsci.medres.widget.TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="@string/thank_you"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.cavsci.medres.widget.TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:shadowColor="@color/white"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="@dimen/shadow_radius"
        android:text="@string/med_res_mob_app_by"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_size_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <com.cavsci.medres.widget.TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:gravity="center"
        android:shadowColor="@color/shadow"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="@dimen/shadow_radius"
        android:text="@string/developers_name"
        android:textSize="@dimen/text_size_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>