<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background5"
    tools:context=".PostCreditsActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_mask" />

    <com.cavsci.medres.widget.TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:shadowColor="@color/shadow"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="@dimen/shadow_radius"
        android:text="@string/do_you_feel_relaxed"
        android:textSize="@dimen/text_size_subtitle"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.cavsci.medres.widget.TextView
        android:id="@+id/textView2"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_stroke_white"
        android:gravity="center"
        android:onClick="onRelaxedClicked"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="@dimen/shadow_radius"
        android:text="@string/yes_relaxed"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.cavsci.medres.widget.TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:shadowColor="@color/shadow"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="@dimen/shadow_radius"
        android:text="@string/do_you_want_to_continue_meditating_or_other_selection"
        android:textSize="@dimen/text_size_subtitle"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.cavsci.medres.widget.TextView
        android:id="@+id/textView4"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_stroke_white"
        android:gravity="center"
        android:onClick="onContinueClicked"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="@dimen/shadow_radius"
        android:text="@string/yes_continue"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


</androidx.constraintlayout.widget.ConstraintLayout>